--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,24 @@
             <version>7.10.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- Allure TestNG integration -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.29.0</version>
+        </dependency>
+
+
     </dependencies>
 
+    <build>
+        <plugins> <!-- Allure plugin must be here -->
+            <plugin>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.12.0</version>
+        </plugin> </plugins>
+    </build>
     <profiles>
 
         <!-- Run parallel tests -->
@@ -66,6 +82,7 @@
                             </suiteXmlFiles>
                         </configuration>
                     </plugin>
+
                 </plugins>
             </build>
         </profile>
